--- a/parasitesdb.lpi
+++ b/parasitesdb.lpi
@@ -28,18 +28,21 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="3">
+    <RequiredPackages Count="4">
       <Item1>
-        <PackageName Value="FCL"/>
+        <PackageName Value="lazreport"/>
       </Item1>
       <Item2>
-        <PackageName Value="sqlite3laz"/>
+        <PackageName Value="FCL"/>
       </Item2>
       <Item3>
-        <PackageName Value="LCL"/>
+        <PackageName Value="sqlite3laz"/>
       </Item3>
+      <Item4>
+        <PackageName Value="LCL"/>
+      </Item4>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="4">
       <Unit0>
         <Filename Value="parasitesdb.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -61,6 +64,13 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Database"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="reportbuilder.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="ReportBuilderForm"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="reportbuilder"/>
+      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -100,4 +110,4 @@
       </Item3>
     </Exceptions>
   </Debugging>
-</CONFIG>
+</CONFIG>
