updated report design imported initial parasites db in csv

--- a/parasitesdb.lpi
+++ b/parasitesdb.lpi
@@ -28,19 +28,25 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="4">
+    <RequiredPackages Count="6">
       <Item1>
-        <PackageName Value="lazreport"/>
+        <PackageName Value="Printer4Lazarus"/>
       </Item1>
       <Item2>
-        <PackageName Value="FCL"/>
+        <PackageName Value="MemDSLaz"/>
       </Item2>
       <Item3>
-        <PackageName Value="sqlite3laz"/>
+        <PackageName Value="lazreport"/>
       </Item3>
       <Item4>
-        <PackageName Value="LCL"/>
+        <PackageName Value="FCL"/>
       </Item4>
+      <Item5>
+        <PackageName Value="sqlite3laz"/>
+      </Item5>
+      <Item6>
+        <PackageName Value="LCL"/>
+      </Item6>
     </RequiredPackages>
     <Units Count="4">
       <Unit0>
@@ -68,8 +74,9 @@
         <Filename Value="reportbuilder.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="ReportBuilderForm"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="reportbuilder"/>
+        <UnitName Value="ReportBuilder"/>
       </Unit3>
     </Units>
   </ProjectOptions>
@@ -110,4 +117,4 @@
       </Item3>
     </Exceptions>
   </Debugging>
-</CONFIG>
+</CONFIG>
